<resources>
    <string name="app_name">Country Game</string>
    <string name="page1_header">Start Country Game</string>
    <string name="subtitle">Choose a Button</string>
    <string name="guess_hints">Guess Hints</string>
    <string name="guess_the_flag">Guess the Flag</string>
    <string name="advanced_level">Advanced Level</string>
    <string name="guess_the_country">Guess the Country</string>
    <string name="background_image">backgroundImage</string>
    <string name="task_01">Guess the Correct country of the given Flag</string>
    <string name="next">Next</string>
    <string name="header3">Choose the correct Flag</string>
    <string name="flag_01">Flag_01</string>
    <string name="flag_02">Flag_02</string>
    <string name="flag_03">Flag_03</string>
    <string name="nextButton">Next</string>
    <string name="start_game">START THE GAME</string>
    <string name="random_flag">random flag</string>
    <string name="nextbtn_1">NEXT</string>
    <string name="submitBtn_1">SUBMIT</string>
    <string name="edittext_1">Enter Flag Name</string>
    <string name="edittext_2">Enter Flag Name</string>
    <string name="next_button">NEXT</string>
    <string name="qustion_4">Fill the Corresponding Text Boxes</string>
    <string name="countryflag_1">countryFlag_1</string>
    <string name="edittext_3">Enter Flag Name</string>
    <string name="submit_button">Submit</string>
    <string name="button_coundown_start">START</string>
    <string name="advance_flag2">TODO</string>
    <string name="start_the_game_advance">START THE GAME</string>
    <string name="countdown_text">00:00</string>
    <string name="reset_countdown">Reset</string>
    <string name="start_countdown">Start</string>
    <string name="start_game_countryGuess">START THE GAME</string>
    <string name="start_game_flagGuess">START THE GAME</string>
    <string name="subtitle_hint">Enter the hint ltter in the textbox given</string>
    <string name="header_hint">Guess The Hint</string>
    <string name="flagImage_hint">randomly changing flags</string>
    <string name="edittext_hint">Enter hint letters</string>
    <string name="next_button_hint">NEXT</string>
    <string name="start_ame_hint">START THE GAME</string>
    <string name="switch_main">Switch</string>

</resources>
