<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuessTheCountry">

    <ImageView
        android:id="@+id/background_image_countryGuess"
        android:layout_width="630dp"
        android:layout_height="800dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/background_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.721"
        app:srcCompat="@drawable/guess_the_country_bg" />

    <!-- ********************************************************************************************************************* -->

    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header2"
        android:layout_alignEnd="@+id/CountryFlag"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="176dp"
        android:text="@string/countdown_text"
        android:textColor="@android:color/black"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button_start_pause"
        style="@android:style/Widget.Material.Light.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_countdown"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="225dp"
        android:layout_marginLeft="225dp"
        android:layout_marginTop="-40dp"
        android:text="@string/start_countdown" />

    <Button
        android:id="@+id/button_reset"
        style="@android:style/Widget.Material.Light.Button.Inset"
        android:layout_width="79dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_countdown"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="307dp"
        android:layout_marginLeft="307dp"
        android:layout_marginTop="-39dp"
        android:text="@string/reset_countdown"
        android:visibility="invisible"
        tools:visibility="visible" />


    <!-- ********************************************************************************************************************* -->

    <TextView
        android:id="@+id/header2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:gravity="center"
        android:text="@string/task_01"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/CountryFlag"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="127dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:contentDescription="@string/random_flag"
        android:scaleType="centerInside" />

    <Button
        android:id="@+id/gameStartbtn"
        style="@android:style/Widget.DeviceDefault.Button.Inset"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="329dp"
        android:onClick="nextFlag"
        android:text="@string/start_game_countryGuess"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/correct_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="163dp"
        android:gravity="center"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="18sp"
        android:visibility="invisible" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="229dp"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/wrong_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="157dp"
        android:gravity="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/final_answer"
        android:layout_width="237dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="87dp"
        android:layout_marginLeft="87dp"
        android:layout_marginBottom="116dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold"
        android:visibility="invisible" />

    <Button
        android:id="@+id/next"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="36dp"
        android:onClick="nextFlag"
        android:text="@string/nextbtn_1" />

    <Button
        android:id="@+id/submit"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="36dp"
        android:onClick="submitSelected"
        android:text="@string/submitBtn_1"
        android:visibility="visible" />

</RelativeLayout>